--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						</div>
 					</div>
 					</div>
-					<div class="item">
+					<div class="item active">
 						<img src="img/seoul2.jpg" class="img-responsive" alt="">
 						<div class="carousel-caption">
 							<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.3s">
