--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
 <section class="section-divider textdivider divider1">
 	<div class="container">
-		<h1>NITA NURWAHYYUNI</h1>
+		<h1>NITA NURWAHYUNI</h1>
 		<p>ayo ke Korea bersama tour kami jangan ragu lagi. Destinasi yang indah untuk di kunjungi dan sangat bagus</p>
 	</div>
 </section>
