--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				</ol>
 				<div class="carousel-inner">
 					<div class="item active">
-						<img src="img/seoul.jpg" class="img-responsive" alt="">
+						<img src="img/Seoul.jpg" class="img-responsive" alt="">
 						<div class="carousel-caption">
 							<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.3s">
 								<h2><span>Beautiful Country to Visit</span></h2>
@@ -62,7 +62,7 @@
 					</div>
 					</div>
 					<div class="item">
-						<img src="img/seoul2.jpg" class="img-responsive" alt="">
+						<img src="img/Seoul2.jpg" class="img-responsive" alt="">
 						<div class="carousel-caption">
 							<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.3s">
 								<h2><span>Beautiful Country to Visit</span></h2>
